--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,18 @@ body {
   font-family: 'Titillium Web', sans-serif;
 }
 
+.d-flex {
+  display: flex;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
 /* galería */
 
 .carousel {
@@ -148,13 +160,12 @@ body {
 }
 
 #logoHome {
-  width: 40%;
-  margin: 80px;
+  width: 25%;
 }
 
 /* Blog */
 #containerViewBlog {
-  padding: 0 60px;
+  padding-left: 60px;
 }
 
 a {
@@ -165,6 +176,11 @@ a {
   width: 15%;
   min-width: 80px;
   padding-bottom: 1px;
+}
+
+#banner {
+  display: flex;
+  justify-content: center;
 }
 
 .imgEntrance {
@@ -181,6 +197,7 @@ padding: 0 20px;
 #titleInicio {
   font-size: 50px;
   font-weight: 700;
+  margin: 0;
 }
 
 #sloganInicio {
@@ -229,7 +246,7 @@ nav.main-menu.expanded {
   -webkit-transform: translateZ(0) scale(1, 1);
   box-shadow: 1px 0 15px rgba(0, 0, 0, 0.07);
   opacity: 1;
-  z-index: 2;
+  z-index: 99;
 }
 
 .main-menu>ul {
@@ -351,12 +368,11 @@ nav.main-menu li.active>a,
   height: 100%;
 }
 
-
-
 /* Vista articulos */
 .article-card {
   height: 20rem;
   float: left;
+  position: relative;
   display: block;
   margin-right: 2.3576515979%;
   width: 48.821174201%;
@@ -382,7 +398,6 @@ nav.main-menu li.active>a,
   position: absolute;
   bottom: 0;
   background: #444;
-  padding: 1rem;
   width: 100%;
   color: #fff;
   border-radius: 0.375rem;
@@ -413,7 +428,15 @@ nav.main-menu li.active>a,
 }
 .article-card .article-info h2 {
   color: #fff;
+  padding: 0 0.5em;
+  margin: 0;
 }
+
+.byline {
+  padding: 1em;
+  margin: 0;
+}
+
 .article-card img {
   width: 100%;
   height: inherit;
@@ -611,6 +634,7 @@ h2 {
 	font-size: 12px;
   font-weight: bold;
   padding: 12px 45px;
+  margin: 10px;
 	letter-spacing: 1px;
 	text-transform: uppercase;
   transition: transform 80ms ease-in;
@@ -779,7 +803,6 @@ label {
 
 /*Reseñas*/
 .comments {
-margin: 10px 340px ;
 width: 55%;
 height: 55%;
 border-radius: 10px;
@@ -790,7 +813,7 @@ box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px
 .textComments {
   width: 100%;
   height: 100%;
-  margin: 20px;
+  text-align: center;
 }
 /*fin*/
 
